[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylocode"
version = "0.0.1"
authors = [
  { name="Daniel Adipranoto", email="daniel@adip.me" },
]
description = "A Python package to lookup UN/LOCODE"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danadi7/pylocode"
"Bug Tracker" = "https://github.com/danadi7/pylocode/issues"